fix: Fix whitespace in word to guess

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,3 @@
 .restartButton-container__button {
   color: white;
 }
-
-.wordToGuess-grid-container {
-  margin-bottom: 100px;
-}
