--- a/src/components/WordToGuess/WordToGuess.css
+++ b/src/components/WordToGuess/WordToGuess.css
@@ -5,7 +5,7 @@
   transform: translateX(-50%);
 }
 
-.wordToGuess__letter {
+.wordToGuess-container__letter {
   border-bottom: 3px solid #2980b9;
   display: inline-flex;
   font-size: 30px;
@@ -14,4 +14,8 @@
   margin: 0 3px;
   height: 50px;
   width: 20px;
+}
+
+.wordToGuess-container__whitespace {
+  margin-left: 20px;
 }
